refine manifest, remove test text

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "Hello World!",
-  "description": "My first Chrome App.",
+  "name": "Twitter Max",
+  "description": "my first Chrome App.",
   "version": "0.1",
   "manifest_version": 2,
   "permissions": [
-    "http://*/*"
+    "https://brand.nioinstances.com:443/*"
     ],
   "app": {
     "background": {
-      "scripts": ["socket.io.js", "nio.js", "background.js"]
+      "scripts": ["background.js"]
     }
   },
   "icons": { "16": "favicon-16x16.png", "48": "android-icon-48x48.png", "128": "apple-icon-120x120.png" }
